--- a/.github/workflows/main_inventorykh2024-backend.yml
+++ b/.github/workflows/main_inventorykh2024-backend.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd backend
-          python -m install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Collect static files
