--- a/.github/workflows/main_inventorykh2024-backend.yml
+++ b/.github/workflows/main_inventorykh2024-backend.yml
@@ -24,27 +24,30 @@ jobs:
 
       - name: Create and start virtual environment
         run: |
-          cd backend
           python -m venv venv
           source venv/bin/activate
+        working-directory: backend
       
       - name: Install dependencies
         run: |
-          cd backend
+          source venv/bin/activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+        working-directory: backend
 
       - name: Collect static files
         run: |
-          cd backend
+          source venv/bin/activate
           python manage.py collectstatic --noinput
+        working-directory: backend
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
         run: |
-          cd backend
+          source venv/bin/activate
           zip release.zip ./* -r
+        working-directory: backend
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
