--- a/.github/workflows/main_inventorykh2024-backend.yml
+++ b/.github/workflows/main_inventorykh2024-backend.yml
@@ -15,42 +15,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up Python version
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
       - name: Create and start virtual environment
         run: |
+          cd backend
           python -m venv venv
           source venv/bin/activate
-        working-directory: backend
       
       - name: Install dependencies
         run: |
-          source venv/bin/activate
+          cd backend
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-        working-directory: backend
 
       - name: Collect static files
         run: |
-          source venv/bin/activate
+          cd backend
           python manage.py collectstatic --noinput
-        working-directory: backend
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
         run: |
-          source venv/bin/activate
+          cd backend
           zip release.zip ./* -r
-        working-directory: backend
 
       - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: python-app
           path: |
@@ -68,7 +65,7 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           name: python-app
 
@@ -84,7 +81,7 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_09179EAD64BA47FFB890BF0F679AF225 }}
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
+        uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'InventoryKH2024-backend'
