--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "firebase": "^10.14.0",
     "primeflex": "^3.3.1",
