--- a/Frontend/firebase.json
+++ b/Frontend/firebase.json
@@ -3,9 +3,17 @@
     "auth": {
       "port": 9099
     },
+    "firestore": {
+      "port": 8080
+    },
+    "functions": {
+      "port": 5001
+    },
+    "hosting": {
+      "port": 5000
+    },
     "ui": {
       "enabled": true
-    },
-    "singleProjectMode": true
+    }
   }
 }
