cleaning old files pt2

--- a/.github/workflows/main_inventorykh2024-backend.yml
+++ b/.github/workflows/main_inventorykh2024-backend.yml
@@ -81,7 +81,7 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_09179EAD64BA47FFB890BF0F679AF225 }}
 
       - name: Clean up old files
-        run: az webapp deployment source config-zip --name  InventoryKH2024-backend --resource-group Inventory --src release.zip --clean
+        run: az webapp ssh --name InventoryKH2024-backend --resource-group Inventory --command "rm -rf site/wwwroot/*"
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
