--- a/.github/workflows/main_inventorykh2024-backend.yml
+++ b/.github/workflows/main_inventorykh2024-backend.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Zip artifact for deployment
         run: |
           cd backend
-          zip -r ../release.zip * venv/ 
+          zip -r release.zip * venv/ 
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
