--- a/.github/workflows/main_inventorykh2024-backend.yml
+++ b/.github/workflows/main_inventorykh2024-backend.yml
@@ -22,6 +22,19 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Create and start virtual environment
+        run: |
+          cd backend
+          python -m venv venv
+          source venv/bin/activate
+      
+      - name: Install dependencies
+        run: |
+          cd backend
+          source venv/bin/activate
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Collect static files
         run: |
           cd backend
