changing azure deployment pipeline

--- a/.github/workflows/main_inventorykh2024-backend.yml
+++ b/.github/workflows/main_inventorykh2024-backend.yml
@@ -71,7 +71,6 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip -d release
-
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -79,6 +78,9 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DAE1B8ACC3B84E0EA324891F3F2D8CEF }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5C60753DE44F4CB4BF65017D84E11765 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_09179EAD64BA47FFB890BF0F679AF225 }}
+
+      - name: List files in release directory
+        run: ls -R release
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
