--- a/.github/workflows/PantryPal-backend.yml
+++ b/.github/workflows/PantryPal-backend.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Zip artifact for deployment
         run: |
           cd backend
-          zip -r release.zip . --exclude 'venv/*'
+          zip -r release.zip . --exclude 'venv/*' --exclude '.env'
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
